--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -27,29 +27,29 @@
   "service": "our service",
   "about_content": "It has a wealth of experience and information technology professionals.\nOur goal is to create a tech-savvy citizen!\n\nIt is a fast-paced and educational online learning platform or application that can be accessed at any time and place.\nIBEX allows customers to receive integrated online basic IT and IT entrepreneurship training courses",
   "benefit_of_our_service": "Benefits of services",
-  "about_content2": "Most of us have a laid back attitude when it comes to teaching. As a result, EthioTitor Online is a digital platform that offers IT courses and has been involved in the digital education process in Ethiopia.\n\n24 * 7 Accessibility Ethiotitoor teaching services are not a matter of geography and time ፡ Learning can occur anytime, anywhere.\nSaves money and time (and no driving) Students learn from the comfort of your own home. No driving or rush hour traffic saves time and money. An online platform also offers time-saving benefits.\n\nThe importance of strategic technology in educational technology This teaches the student to use the digital platform in a systematic and effective way, which can be transferred directly from the academic environment to the corporate environment.",
+  "about_content2": "Our services benefit our customers bringing Many types of information in one platform rite on different kind of category’s anytime any where.",
   "vision": "Our vision is to provide 100% customer satisfaction by providing quality basic IT and IT entrepreneurship training at affordable prices.",
   "week": "IBEX teachers have extensive experience with ICT Innovation Gatex Technology.",
   "vision2": "vision",
   "our_service": "IBEX Service",
   "online_chat_box": "IBEX online chat box",
   "basic_it": "Provides Basic ICT and ICT Entrepreneurship Online Quality.",
-  "question_or_suggestion": "If you have any questions or suggestions, you can send a message to EthioTitor online chat box.",
+  "question_or_suggestion": "If you have any questions or suggestions, you can send a message to IBEVLOG online chat box.",
   "ibex_paymant": "IBEX PAYMENT",
   "three_day_free": "You will receive free service for 3 days, you will pay 2 Birr for our daily service.",
   "you_can_contact_us": "Contact us on ",
   "free_service": "You will receive free service for 3 days, you will pay 2 Birr for our daily service. If you want to stop the service, send it to 9094 stop\n",
-  "ben_detail": "Most of us have a laid back attitude when it comes to teaching. As a result, EthioTitor Online is a digital platform that offers IT courses and has been involved in the digital education process in Ethiopia.\n",
+  "ben_detail": "Most of us have a laid back attitude when it comes to teaching. As a result, IBEVLOG Online is a digital platform that offers IT courses and has been involved in the digital education process in Ethiopia.\n",
   "Accessibility": "Accessibility",
   "Accessibility_detail": "When it comes to IBEX tutoring services, geography and time are never a concern ፡ Learning can be done anytime, anywhere.",
   "save_money_and_time": "It saves money and time",
-  "student_lear": "A student learns from the comfort of your own home. No rush hour saves time and money. EthioTitor Online Study of IT Courses\n                                     It saves time.",
+  "student_lear": "A student learns from the comfort of your own home. No rush hour saves time and money. IBEVLOG Online Study of IT Courses\n                                     It saves time.",
   "provide_str": "Provides strategic technology benefits\n",
   "edu_tech": "In educational technology, it teaches students to use the digital platform in a systematic and effective way.\n",
   "mobile_info": "Provides via mobile phone, computer and various smart electronic devices.",
   "traning_provided": "The trainings provided\n",
   "gives": "Even with videos, voice, text, live chat, text message and direct call\n                                                 Gives.",
-  "our_goal": "Our goal is to create a tech-savvy citizen! EthioTitor has experienced and educated information technology professionals.",
+  "our_goal": "Our vison is to provide 100% customer satisfaction and knowledge by providing quality tech info, scholarship’s update, business opportunities and many more in one platform ",
   "tech_game_show": "Tech: Entertainment: Game Show: Production Review: Opportunity Village\n",
   "ibex": "IBEX",
   "video_ent": "Complete video entertainment! ",
@@ -75,5 +75,15 @@
   "password": "password",
   "wrong_credential": "These credentials do not match our records.",
   "complete_account": "You must have to complete your account before taking any action",
-  "warning": "Warning"
+  "warning": "Warning",
+  "game_rule": "you get rewarded when you answer more than 90%",
+  "attention": "attention!!!",
+  "ok": "ok",
+  "you_cannot_change": "You Cannot Change Your Answer",
+  "please_select_your_choice": "Please Select  Your Choice",
+  "congratulation": "congratulations",
+  "you_will_receive_your_reward": "you will receive a reward on your phone soon ",
+  "completed": "completed",
+  "you_are_completed_your_question": "you are Completed your Question",
+  "opportunities": "opportunities"
 }
